--- a/src/GrowDate.Frontend/wwwroot/index.html
+++ b/src/GrowDate.Frontend/wwwroot/index.html
@@ -23,7 +23,13 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    
+    <!-- Three.js for 3D globe -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    
     <script src="js/map.js"></script>
+    <script src="js/globe.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
