--- a/src/GrowDate.Frontend/wwwroot/index.html
+++ b/src/GrowDate.Frontend/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:5100 http://localhost:5101;">
+    <meta http-equiv=\"Content-Security-Policy\" content=\"default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:5100 http://localhost:5101 http://api:5100;\">"
     <title>GrowDate</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
